Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24949

Enabling idle flushing (possible regression from MDEV-23855)

    XMLWordPrintable

Details

    Description

      • Existing logic doesn't have idle flushing enabled. It got removed as part of the MDEV-23855 revamp.
      • Given the new/update flow of the page-cleaner idle flushing logic will be enabled if
      • page cleaner is idle
      • there are dirty pages (<srv_max_dirty_pages_pct_lwm)
      • server is not performing any activity.

      Attachments

        1. idle-flushing (patched (enabled) vs baseline (disabled))_NvME SSD.png
          idle-flushing (patched (enabled) vs baseline (disabled))_NvME SSD.png
          22 kB
        2. idle-flushing (patched (enabled) vs baseline (disabled))_sas-ssd (350MB_sec).png
          idle-flushing (patched (enabled) vs baseline (disabled))_sas-ssd (350MB_sec).png
          24 kB
        3. mdb.nvme.cnf
          2 kB
        4. mdb.sasssd.cnf
          2 kB
        5. oltp_ts_16.png
          oltp_ts_16.png
          22 kB
        6. oltp_ts_16B.png
          oltp_ts_16B.png
          29 kB
        7. oltp.png
          oltp.png
          24 kB
        8. oltpB.png
          oltpB.png
          22 kB
        9. run.sh
          1 kB
        10. Screenshot from 2021-02-23 19-15-04.png
          Screenshot from 2021-02-23 19-15-04.png
          53 kB

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              krunalbauskar Krunal Bauskar
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 2.25h
                  3d 2.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.